--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vercel/node": "^5.3.16",
+    "formidable": "^3.5.4",
+    "iron-session": "^8.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,10 +20,7 @@
     "@types/formidable": "^3.4.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vercel/node": "^5.3.16",
     "@vitejs/plugin-react": "^3.1.0",
-    "formidable": "^3.5.4",
-    "iron-session": "^8.0.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
