--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/node": "^5.3.16",
     "formidable": "^3.5.4",
     "iron-session": "^8.0.4",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
